cabal-version:      2.4
name:               aoc21
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Johannes
maintainer:         joheker@student.chalmers.se

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Solution,
    Days.Day01,
    Days.Day02,
    Days.Day03,
    Days.Day04,
    Days.Day05,
    Days.Day06,
    Days.Day07,
    Days.Day08,
    Days.Day09,
    Days.Day10,
    Days.Day11,
    Days.Day12,
    Days.Day13,
    Days.Day14,
    Days.Day15,
    Days.Day16,
    Days.Day17,
    Days.Day18,
    Days.Day19,
    Days.Day20,
    Days.Day21,
    Days.Day22,
    Days.Day23,
    Days.Day24,
    Days.Day25

  hs-source-dirs: src

  build-depends: attoparsec,
                 base ^>=4.15.0.0,
                 containers,
                 deepseq >= 1.4.5.0,
                 parsec >= 3.1.14.0,
                 text >= 1.2.4.1,
                 time,
                 vector,
                 split
                
  default-language: Haskell2010

executable aoc21
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aoc21,
                      attoparsec,
                      base ^>=4.15.0.0,
                      containers,
                      deepseq >= 1.4.5.0,
                      parsec >= 3.1.14.0,
                      text >= 1.2.4.1,
                      time,
                      split

                      

                      
    hs-source-dirs:   app
    default-language: Haskell2010
